resources/https/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-voting-app-with-tls
spec:
  rules:
  - host: vote.<YOUR NAME>.k8s.crafteo.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vote
            port:
              number: 5000
  - host: result.<YOUR NAME>.k8s.crafteo.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: result
            port:
              number: 5001
  tls:
  - hosts:
    - vote.<YOUR NAME>.k8s.crafteo.io
    - result.<YOUR NAME>.k8s.crafteo.io
    secretName: ingress-certificate-secret
